[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16.1"
winit = "0.28.6" # cross platform window creation library
cgmath = "0.18.0" # graphics math library
futures = "0.3.28" # rust futures feature
anyhow = "1.0.71" # errors with context
pollster = "0.3.0" # minimal future evaluation that blocks thread until future completion
log = "0.4.19" # logging library for rust
env_logger = "0.10.0" # implementation of logging to
bytemuck = { version="1.13.1", features = ["derive"] } # perform bit cast operations between datatypes
image = "0.24.6" # filters and decoders for image formats
rand = "0.8.5"
